# tRust-chat

./: .gitignore  Cargo.toml  README.md  readme.MD
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: input.rs  main.rs  network.rs  state.rs
protocol/: Cargo.toml
protocol/src/: crypto.rs  error.rs  lib.rs
relay/: Cargo.toml
relay/src/: main.rs
