[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
thiserror = "2.0.17"
chacha20poly1305 = "0.10.1"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }
hex = "0.4.3"
